@@ -40,7 +40,6 @@ typedef struct MessageFileLine MessageFileLine;
 typedef enum {
   USER_MOTD,
   USER_LINKS,
-  OPER_MOTD,
   ISSUPPORT
 } MotdType;
   
