@@ -6,10 +6,10 @@ moduledir=$(pkglibdir)/modules/autoload
 
 if USE_SHARED_MODULES
 AM_LDFLAGS=-no-undefined -module -avoid-version
-module_LTLIBRARIES=m_accept.la m_admin.la m_away.la m_capab.la m_cap.la m_certfp.la m_challenge.la m_close.la m_connect.la m_dline.la m_encap.la m_eob.la m_etrace.la m_globops.la m_gnotice.la m_hash.la m_help.la m_info.la m_invite.la m_ison.la m_kline.la m_knock.la m_links.la m_list.la m_locops.la m_log.la m_lusers.la m_map.la m_motd.la m_names.la m_omotd.la m_oper.la m_operwall.la m_pass.la m_ping.la m_pong.la m_post.la m_realhost.la m_rehash.la m_restart.la m_resv.la m_set.la m_shedding.la m_services.la m_stats.la m_svinfo.la m_svscloak.la m_svsmode.la m_svsnick.la m_tburst.la m_testline.la m_testmask.la m_time.la m_topic.la m_trace.la m_user.la m_userhost.la m_users.la m_version.la m_wallops.la m_who.la m_whois.la m_whowas.la m_xline.la #soft_reboot.la
+module_LTLIBRARIES=m_accept.la m_admin.la m_away.la m_capab.la m_cap.la m_certfp.la m_challenge.la m_close.la m_connect.la m_dline.la m_encap.la m_eob.la m_etrace.la m_globops.la m_gnotice.la m_hash.la m_help.la m_info.la m_invite.la m_ison.la m_kline.la m_knock.la m_links.la m_list.la m_locops.la m_log.la m_lusers.la m_map.la m_motd.la m_names.la m_oper.la m_operwall.la m_pass.la m_ping.la m_pong.la m_post.la m_realhost.la m_rehash.la m_restart.la m_resv.la m_set.la m_shedding.la m_services.la m_stats.la m_svinfo.la m_svscloak.la m_svsmode.la m_svsnick.la m_tburst.la m_testline.la m_testmask.la m_time.la m_topic.la m_trace.la m_user.la m_userhost.la m_users.la m_version.la m_wallops.la m_who.la m_whois.la m_whowas.la m_xline.la #soft_reboot.la
 else
 AM_LDFLAGS=-static
-noinst_LTLIBRARIES=m_accept.la m_admin.la m_away.la m_capab.la m_cap.la m_certfp.la m_challenge.la m_close.la m_connect.la m_dline.la m_encap.la m_eob.la m_etrace.la m_globops.la m_gnotice.la m_hash.la m_help.la m_info.la m_invite.la m_ison.la m_kline.la m_knock.la m_links.la m_list.la m_locops.la m_log.la m_lusers.la m_map.la m_motd.la m_names.la m_omotd.la m_oper.la m_operwall.la m_pass.la m_ping.la m_pong.la m_post.la m_realhost.la m_rehash.la m_restart.la m_resv.la m_set.la m_shedding.la m_services.la m_stats.la m_svinfo.la m_svscloak.la m_svsmode.la m_svsnick.la m_tburst.la m_testline.la m_testmask.la m_time.la m_topic.la m_trace.la m_user.la m_userhost.la m_users.la m_version.la m_wallops.la m_who.la m_whois.la m_whowas.la m_xline.la #soft_reboot.la
+noinst_LTLIBRARIES=m_accept.la m_admin.la m_away.la m_capab.la m_cap.la m_certfp.la m_challenge.la m_close.la m_connect.la m_dline.la m_encap.la m_eob.la m_etrace.la m_globops.la m_gnotice.la m_hash.la m_help.la m_info.la m_invite.la m_ison.la m_kline.la m_knock.la m_links.la m_list.la m_locops.la m_log.la m_lusers.la m_map.la m_motd.la m_names.la m_oper.la m_operwall.la m_pass.la m_ping.la m_pong.la m_post.la m_realhost.la m_rehash.la m_restart.la m_resv.la m_set.la m_shedding.la m_services.la m_stats.la m_svinfo.la m_svscloak.la m_svsmode.la m_svsnick.la m_tburst.la m_testline.la m_testmask.la m_time.la m_topic.la m_trace.la m_user.la m_userhost.la m_users.la m_version.la m_wallops.la m_who.la m_whois.la m_whowas.la m_xline.la #soft_reboot.la
 endif
 
 AM_LDFLAGS+=$(OPENSSL_LDFLAGS)
@@ -109,7 +109,6 @@ m_lusers_la_LDFLAGS = $(MODULE_FLAGS)
 m_map_la_LDFLAGS = $(MODULE_FLAGS)
 m_motd_la_LDFLAGS = $(MODULE_FLAGS)
 m_names_la_LDFLAGS = $(MODULE_FLAGS)
-m_omotd_la_LDFLAGS = $(MODULE_FLAGS)
 m_oper_la_LDFLAGS = $(MODULE_FLAGS)
 m_operwall_la_LDFLAGS = $(MODULE_FLAGS)
 m_pass_la_LDFLAGS = $(MODULE_FLAGS)
@@ -170,7 +169,6 @@ m_lusers_la_SOURCES = m_lusers.c
 m_map_la_SOURCES = m_map.c
 m_motd_la_SOURCES = m_motd.c
 m_names_la_SOURCES = m_names.c
-m_omotd_la_SOURCES = m_omotd.c
 m_oper_la_SOURCES = m_oper.c
 m_operwall_la_SOURCES = m_operwall.c
 m_pass_la_SOURCES = m_pass.c
