@@ -747,9 +747,9 @@ static struct NumericInfo replies[] = {
 /* 717 */  {"RPL_TARGNOTIFY", ":%s 717 %s %s :has been informed that you messaged them.", NULL},
 /* 718 */  {"RPL_UMODEGMSG", ":%s 718 %s %s :is messaging you, and you are umode +g or +G.", NULL},
 /* 719 */  {NULL, NULL, NULL},
-/* 720 */  {"RPL_OMOTDSTART", ":%s 720 %s :Start of OPER MOTD.", NULL},
-/* 721 */  {"RPL_OMOTD", ":%s 721 %s :%s", NULL},
-/* 722 */  {"RPL_ENDOFOMOTD", ":%s 722 %s :End of OPER MOTD.", NULL },
+/* 720 */  {NULL, NULL, NULL},
+/* 721 */  {NULL, NULL, NULL},
+/* 722 */  {NULL, NULL, NULL},
 /* 723 */  {"ERR_NOPRIVS", ":%s 723 %s %s :Insufficient oper privs.", NULL },
 /* 724 */  {"RPL_TESTMASK", ":%s 724 %s %s@%s %d %d :Local/remote clients match.", NULL },
 /* 725 */  {"RPL_TESTLINE", ":%s 725 %s %c %ld %s :%s | %s", NULL },
