@@ -115,6 +115,7 @@ o) Replaced MODLOAD, MODUNLOAD, MODRELOAD, MODLIST and MODRESTART commands
    and LIST parameters.
    MODRESTART has been entirely removed. Use "MODULE RELOAD *" to reload all modules
 o) Added back server notice when a client tries to obtain a reserved nick name
+o) Removed OMOTD module
 
 
 -- ircd-hybrid-8beta1 Release Notes
